--- a/assents/index.html
+++ b/assents/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
     <main>
-        <img src="../imagens/fundo-madeira.jpg" class="fundo-madeira" alt="fundo-madeira">
+       <section id="telefone"> 
+    
+       </section>
+
+       <section id="redes-sociais"> 
+           
+       </section>
     </main>
 </body>
 </html>
